--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@user, :html => { :multipart => true }) do |f| %>
+<%= form_for(@user) do |f| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -25,15 +25,7 @@
     <%= f.label :email %><br />
     <%= f.text_field :email %>
   </div>
-    
-  <div class="field">
-    <% #vi får errors om det inte finns något attribut så vi struntar i felet med rescue nil %>
-    <% unless @user.new_record? && @user.photo %>
-        <%= image_tag(@user.photo.url(:thumb)) %><br />
-    <% end %>
-    <%= f.label :photo %><br />
-    <%= f.file_field :photo %>
-</div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
