Added link to facebook auth

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -26,6 +26,8 @@
     <%= f.text_field :email %>
   </div>
 
+  <%= link_to "Get images from Facebook", "/auth/facebook" %>
+
   <div class="actions">
     <%= f.submit %>
   </div>
