return only the photos

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,4 +2,11 @@
 
 <%= render 'form' %>
 
+<% if @photos %>
+<pre>
+    @PHOTOS!
+    <%= @photos.inspect %>
+</pre>
+<% end %>
+
 <%= link_to 'Back', users_path %>
