images are shown in index and show

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
     <b>Photo:</b>
-    <p>...</p>
+    <%= image_tag @user.photo_url %>
 </p>
 
 <p><%= link_to "Back to list of users", users_path %>
