--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
 <ul>
     <% @users.each do |user| %>
         <li>
-            <%= link_to user.name, user_path(user) %>
+            <%= link_to(image_tag(user.photo_url, :alt => user.name, :class => "index-photos"), user_path(user)) %>
         </li>
     <% end %>
 </ul>
