--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,8 +3,10 @@
 <%= link_to "Edit your profile", edit_your_user_path %>
 <ul>
     <% @users.each do |user| %>
-        <li>
-            <%= link_to(image_tag(user.photo_url || "", :alt => user.name, :class => "index-photos"), user_path(user)) %>
-        </li>
+        <% if user.has_photo? %>
+            <li>
+                <%= link_to(image_tag(user.photo_url || "", :alt => user.name, :class => "index-photos"), user_path(user)) %>
+            </li>
+        <% end %>
     <% end %>
 </ul>
