--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,9 +5,15 @@
     <%= @user.name %>
 </p>
 
+<% if @user.has_photo? %>
 <p>
     <b>Photo:</b>
     <%= image_tag @user.photo_url %>
+</p>
+<% end %>
+
+<p>
+    <%= @user.locale %> office
 </p>
 
 <p><%= link_to "Back to list of users", users_path %>
