Added working play and quit playing buttons

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
             <input type="submit"></input>
         </form>
     </div>
+    <a href="#" id="quit-playing">Quit playing</a>
 </div>
 
 <div class="session">
