--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -102,3 +102,12 @@ body, p, ol, ul, td {
     font-weight: 300;
     font-size: 30px;
 }
+
+
+#game-sidebar{
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 200px;
+    background: #555;
