--- a/app/views/users/game/_names_sidebar.html.erb
+++ b/app/views/users/game/_names_sidebar.html.erb
@@ -3,3 +3,4 @@
 <% @users.each do |user| %>
     <li><span class="first_name"><%= user.first_name %></span> <span class="last_name"><%= user.last_name %></span></li>
 </ul>
+<% end %>
