--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -9,6 +9,14 @@ body, p, ol, ul, td {
     line-height: 30px;
 }
 
+#page-wrapper{
+    margin-right: 240px;
+}
+
+.session{
+    display: none;
+}
+
 #notice {
     color: green;
 }
@@ -109,5 +117,16 @@ body, p, ol, ul, td {
     top: 0;
     right: 0;
     height: 100%;
-    width: 200px;
+    width: 180px;
     background: #555;
+    font-size: 18px;
+    padding: 10px;
+}
+#game-sidebar ul, #peeps ul{
+    padding-left: 0;
+}
+#game-sidebar li{
+    font-size: 14px;
+    font-weight: bold;
+    list-style: none;
+}
