Added some statistics fields to user model

--- a/app/views/users/game/_names_sidebar.html.erb
+++ b/app/views/users/game/_names_sidebar.html.erb
@@ -1,5 +1,5 @@
 <h2>Names</h2>
-<ul>
+<ul id="names">
 <% @users.each do |user| %>
     <li><span class="first_name"><%= user.first_name %></span> <span class="last_name"><%= user.last_name %></span></li>
 </ul>
