--- a/app/views/users/game/_names_sidebar.html.erb
+++ b/app/views/users/game/_names_sidebar.html.erb
@@ -1,6 +1,7 @@
-<h2>Names</h2>
+<h2 id="logo">Peeps!</h2>
+<%= link_to "Edit your profile", edit_your_user_path %>
 <ul id="names">
 <% @users.each do |user| %>
-    <li><span class="first_name"><%= user.first_name %></span> <span class="last_name"><%= user.last_name %></span></li>
-</ul>
+    <li class="ui-draggable"><%= user.name %></li>
 <% end %>
+</ul>
