Only show name in sidebar if the user has a photo

--- a/app/views/users/game/_names_sidebar.html.erb
+++ b/app/views/users/game/_names_sidebar.html.erb
@@ -2,6 +2,8 @@
 <%= link_to "Edit your profile", edit_your_user_path %>
 <ul id="names">
 <% @users.each do |user| %>
+    <% if user.photo? %>
     <li class="ui-draggable"><%= user.name %></li>
+    <% end %>
 <% end %>
 </ul>
