Added notice to sidebar and changed locales to a simple array

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -30,7 +30,7 @@
 
   <div class="field">
     <%= f.label :locale %><br />
-    <%= f.select :locale, locales.map{|l| [l.values.to_s, l.keys] } %>
+    <%= f.select :locale, locales.map{|l| [l, l.downcase] } %>
   </div>
 
   <% if @photos %>
