--- a/app/views/users/game/_names_sidebar.html.erb
+++ b/app/views/users/game/_names_sidebar.html.erb
@@ -1,5 +1,9 @@
 <h2 id="logo">Peeps!</h2>
 <%= link_to "Edit your profile", edit_your_user_path %>
+
+<p id="notice">
+    <%= notice %>
+</p>
 <ul id="names">
 <% @users.each do |user| %>
     <% if user.photo? %>
