--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -55,9 +55,11 @@ body, p, ol, ul, td {
 #peeps li {
     list-style: none;
 }
-.index-photos{
+.index-photos, .edit_user img{
     max-width: 340px;
     max-height: 340px;
+}
+.index-photos{
     margin: 10px;
     border: 10px solid #dfdfdf;
 }
