--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -87,10 +87,11 @@ body, p, ol, ul, td {
     display: inline-block;
     margin-bottom: 5px;
     color: #000;
-    font-size: 14px;
+    font-size: 13px;
+    line-height: 13px;
     font-weight: bold;
     list-style: none;
-    padding: 0 6px 0;
+    padding: 8px;
     background: #7DCDEF;
     -moz-border-radius: 15px;
     -webkit-border-radius: 15px;
