--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -60,8 +60,7 @@ body, p, ol, ul, td {
     max-height: 340px;
 }
 .index-photos{
-    margin: 10px;
-    border: 10px solid #dfdfdf;
+    margin: 20px 0 0 20px;
 }
 #game-sidebar{
     position: fixed;
@@ -116,10 +115,4 @@ body, p, ol, ul, td {
     color: #000;
     width: auto;
     display: inline;
-}
-.index-photos.correct{
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    border: 10px solid green;
 }
