Added a preloader for thumb images

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -12,3 +12,7 @@
 <div id="game-sidebar">
     <%= render :partial => "users/game/names_sidebar" %>
 </div>
+<div id="preloader">
+    <%= image_tag "thumbs-up.png", :class => "hide" %>
+    <%= image_tag "thumbs-down.png", :class => "hide" %>
+</div>
