--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,3 +16,4 @@
     <%= image_tag "thumbs-up.png", :class => "hide" %>
     <%= image_tag "thumbs-down.png", :class => "hide" %>
 </div>
+<div id="edit" style="display:none;"></div>
