--- a/app/views/users/game/_names_sidebar.html.erb
+++ b/app/views/users/game/_names_sidebar.html.erb
@@ -1,5 +1,5 @@
 <h2 id="logo">Peeps!</h2>
-<%= link_to "Edit your profile", edit_your_user_path, :id => "edit-profile" %>
+<%= link_to "Edit your profile", edit_your_user_path %>
 
 <p id="notice">
     <%= notice %>
