--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -69,8 +69,11 @@ body, p, ol, ul, td {
     z-index: 1000;
 }
 #logo{
+    float:right;
+    clear:both;
     padding-top: 35px;
     height: 40px;
+    width:220px;
     background: url(/images/mynewsdesk.png) no-repeat 0 0;
     text-align: right;
 }
