--- a/app/views/users/game/_names_sidebar.html.erb
+++ b/app/views/users/game/_names_sidebar.html.erb
@@ -1,5 +1,11 @@
 <h2 id="logo">Peeps!</h2>
 <%= link_to "Edit your profile", edit_your_user_path %>
+<% form_tag change_game_locale_path, :method => :get do %>
+    <%= label_tag "locale", "Change" %>
+    <%= select_tag("office", option_groups_from_collection_for_select(@locales, :offices, :name, :code, :name, params[:office])) %>
+    <%= submit_tag "Change", :class => "hide" %>
+    <p> or <%= link_to "all", root_path %></p>
+<% end %>
 
 <p id="notice">
     <%= notice %>
