--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,3 +17,4 @@
     <%= image_tag "thumbs-down.png", :class => "hide" %>
 </div>
 <div id="edit" style="display:none;"></div>
+<%= render :partial => "users/game/win" %>
