Added total_score field to scores

--- a/app/views/users/game/_names_sidebar.html.erb
+++ b/app/views/users/game/_names_sidebar.html.erb
@@ -21,6 +21,7 @@
     <%= hidden_field_tag "score[duration]", 0 %>
     <%= hidden_field_tag "score[correct_peeps]", 0 %>
     <%= hidden_field_tag "score[incorrect_peeps]", 0 %>
+    <%= hidden_field_tag "score[total_score]", 0 %>
     <%= submit_tag "Submit score" %>
 <% end %>
 
