--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -54,6 +54,10 @@ body.users-edit{
     max-width: 340px;
     max-height: 340px;
 }
+img.avatar{
+   max-width:40px;
+   max-height:40px; 
+}
 .index-photos{
     margin: 20px 0 0 20px;
     position: relative;
@@ -172,21 +176,26 @@ body.users-edit{
     left:0;
     width:100%;
     height:100%;
-    background-image: url(/images/explosion.gif);
+    background-image: url(/images/team.jpg);
     background-size: 100%;
     background-origin: content;
     z-index:9001;
-    color:#fff;
+    color:#000;
     font-weight:bold;
+    text-align:center;
+}
+#win h2, #win h3, #win p{
+    text-shadow:0 0 20px #E25224;
 }
 #win .win-wrapper{
     width:700px;
-    margin:50px auto;
+    margin:20px auto;
+    text-shadow:none;
 }
 #win h2{
-    font-size:125px;
+    font-size:80px;
     text-align:center;
-    line-height:120px;
+    line-height:80px;
 }
 #win h3{
     font-size:40px;
@@ -199,12 +208,31 @@ body.users-edit{
     margin-bottom:0;
 }
 #win .score{
-    background:#000;
+    background:#E25224;
     padding:10px 30px;
-    margin-bottom:10px;
-    text-align:center;
+    margin-top:10px;
+    color:#000;
+    -moz-border-radius:30px;
+    -webkit-border-radius:30px;
+    border-radius:30px;
 }
 #win p{
-    font-size:30px;
-    line-height:40px;
+    font-size:20px;
+    line-height:24px;
+}
+.space-top{
+    margin-top:20px;
+}
+table.highscore{
+    margin:0 auto;
+    width:50%;
+}
+table th{
+    font-size:16px;
+}
+table th.th_name{
+    width:80%;
+}
+table th.th_score{
+    width:20%;
 }
