Hides the win popup on load

--- a/app/views/users/game/_win.html.erb
+++ b/app/views/users/game/_win.html.erb
@@ -1,4 +1,4 @@
-<div id="win" class="hidee">
+<div id="win" class="hide">
     <div class="win-wrapper">
         <h2>Highfive!</h2>
         <% if params[:office].present? %>
