--- a/app/views/users/game/_names_sidebar.html.erb
+++ b/app/views/users/game/_names_sidebar.html.erb
@@ -2,9 +2,8 @@
 <%= link_to "Edit your profile", edit_your_user_path %>
 <% form_tag change_game_locale_path, :method => :get, :id => "change-office" do %>
     <%= label_tag "office", "Change" %>
-    <%= select_tag("office", option_groups_from_collection_for_select(@locales, :offices, :name, :code, :name, params[:office])) %>
+    <%= select_tag("office", option_groups_from_collection_for_select(@locales, :offices, :name, :code, :name, params[:office]), {:include_blank => "All offices"}) %>
     <%= submit_tag "Change", :class => "hide" %>
-    <p> or <%= link_to "all", root_path %></p>
 <% end %>
 
 <% form_tag submit_score_path, :method => :post, :id => "submit-score", :class => "hide" do %>
