win background is repeated

--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -207,6 +207,7 @@ input#user_submit{
     background-image: url(/images/team.jpg);
     background-size: 100%;
     background-origin: content;
+    background-repeat:repeat-y;
     z-index:9001;
     color:#000;
     font-weight:bold;
