office info in win partial are now always paragraphs instead of header

--- a/app/views/users/game/_win.html.erb
+++ b/app/views/users/game/_win.html.erb
@@ -2,7 +2,7 @@
     <div class="win-wrapper">
         <h2>Highfive!</h2>
         <% if params[:office].present? %>
-            <h3>You finished the <%= Office.find_by_code(params[:office]).name %> office!</h3>
+            <p>You finished the <%= Office.find_by_code(params[:office]).name %> office!</p>
         <% else %>
             <p>You finished everyone!</p>
         <% end %>
